fix : navbar offset on safari

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -25,10 +25,8 @@
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
         &-content{
             display: flex;
-            justify-content: center;
-            gap: 25%;
-            padding: 0 30px;
-
+            justify-content: space-between;
+            width: 90%;
         }
     }
 }
