--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -70,7 +70,9 @@ $card-text-color-3 : #FE5F55;
 }
 
 @mixin zoom-effect {
+    -webkit-transform: scale(1.1); 
     transform: scale(1.1);
+    -webkit-transition: transform 0.3s ease; 
     transition: transform 0.3s ease;
 }
 
